--- a/src/main/resources/templates/authentication/login.html
+++ b/src/main/resources/templates/authentication/login.html
@@ -32,8 +32,8 @@
                                 <label for="password" class="form-label">Password:</label>
                                 <input type="password" id="password" name="password" class="form-control" required>
 
-                                <p class="text-secondary">Forgot your password? Reset it <a href="/password-reset"
-                                                                                            class="text-primary">here</a>!
+                                <p class="text-secondary">Forgot your password? Reset it
+                                    <a href="/reset-password" class="text-primary">here</a>!
                                 </p>
                             </div>
 
@@ -45,6 +45,8 @@
                             <div class="mb-3">
                                 <p class="text-center">Don't have an account? <a href="/register">Register</a></p>
                             </div>
+
+                            <!--                            <a href="/password-reset" class="text-primary">here</a>-->
                             <button type="submit" class="btn btn-primary">Login</button>
                         </form>
                     </div>
