--- a/src/main/resources/templates/authentication/reset-password.html
+++ b/src/main/resources/templates/authentication/reset-password.html
@@ -22,14 +22,13 @@
                         <p th:if="${MSG_ERROR}" class="alert alert-danger mb-4" role="alert">[[${MSG_ERROR}]]</p>
 
                         <form th:action="@{/reset-password}" method="post">
-                            <div class="mb-3">
+                            <div class="mb-3" th:if="!${MSG_SUCCESS}">
                                 <label for="email" class="form-label">Email:</label>
                                 <input type="email" id="email" name="email" class="form-control" required>
                             </div>
 
-
-                            <button type="submit" class="btn btn-primary">Send code</button>
-                            <a href="/login" class="btn">Return to login</a>
+                            <button type="submit" class="btn btn-primary" th:if="!${MSG_SUCCESS}">Send code</button>
+                            <a href="/login" th:class="'btn ' + (${MSG_SUCCESS} ? 'btn-primary' : '')">Return to login</a>
                         </form>
                     </div>
                 </div>
