Updated and dockerized app

--- a/src/main/resources/templates/authentication/reset-password.html
+++ b/src/main/resources/templates/authentication/reset-password.html
@@ -21,10 +21,11 @@
                         <p th:if="${MSG_INFO}" class="alert alert-info mb-4" role="alert">[[${MSG_INFO}]]</p>
                         <p th:if="${MSG_ERROR}" class="alert alert-danger mb-4" role="alert">[[${MSG_ERROR}]]</p>
 
-                        <form th:action="@{/reset-password}" method="post">
+                        <form th:action="@{/reset-password}" method="post" th:object="${userPasswordResetDTO}">
                             <div class="mb-3" th:if="!${MSG_SUCCESS}">
                                 <label for="email" class="form-label">Email:</label>
-                                <input type="email" id="email" name="email" class="form-control" required>
+                                <input type="email" id="email" name="email" class="form-control" required
+                                        th:field="*{email}">
                             </div>
 
                             <button type="submit" class="btn btn-primary" th:if="!${MSG_SUCCESS}">Send code</button>
