Added email service, password checks, password strength visual representation, refactorized and updated

--- a/src/main/resources/templates/notes/editor.html
+++ b/src/main/resources/templates/notes/editor.html
@@ -81,6 +81,10 @@
 
 
             <button type="button" onclick="submitForm()" class="btn btn-primary" th:text="${editMode ? 'Save note' : 'Create note'}"></button>
+
+            <a href="/notes" class="btn btn-secondary">
+                Cancel
+            </a>
         </form>
     </div>
 
