--- a/src/main/resources/templates/authentication/change-password.html
+++ b/src/main/resources/templates/authentication/change-password.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" th:href="@{/css/password-input-visual-effects.css}" type="text/css"/>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
             crossorigin="anonymous"></script>
@@ -27,12 +28,18 @@
                             <input type="hidden" id="token" name="token" th:field="*{token}">
 
                             <div class="mb-3">
-                                <label for="password" class="form-label">Password:</label>
-                                <input type="password" id="password" name="password" class="form-control"
-                                       th:field="*{password}" required>
+                                <div class="password-container">
+                                    <label for="password" class="form-label">New password:</label>
+
+                                    <input type="password" id="password" name="password" class="form-control" th:field="*{password}"
+                                           onchange="checkEntropy()" required/>
+                                    <div id="password-strength-bar" class="password-strength-bar"></div>
+                                </div>
+                                <div id="result"></div>
                             </div>
+
                             <div class="mb-3">
-                                <label for="passwordToConfirm" class="form-label">Confirm password:</label>
+                                <label for="passwordToConfirm" class="form-label">Confirm new password:</label>
                                 <input type="password" id="passwordToConfirm" name="passwordToConfirm" class="form-control"
                                        th:field="*{passwordToConfirm}" required>
                             </div>
@@ -45,6 +52,7 @@
             </div>
         </div>
     </div>
+    <script th:src="@{/js/password-input-visual-effects.js}" type="text/javascript"></script>
 </div>
 </body>
 </html>
