--- a/src/main/resources/templates/authentication/register.html
+++ b/src/main/resources/templates/authentication/register.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" th:href="@{/css/password-input-visual-effects.css}" type="text/css"/>
 </head>
 <body class="bg-light">
 <div layout:fragment="content">
@@ -28,9 +29,16 @@
                      th:text="${#fields.errors('email').getFirst()}"></div>
             </div>
             <div class="mb-3">
-                <label for="password" class="form-label">Password:</label>
-                <input type="password" id="password" class="form-control" th:field="*{password}" required/>
-                <div class="invalid-feedback" th:if="${#fields.hasErrors('email')}" th:errors="*{password}"
+                <div class="password-container">
+                    <label for="password" class="form-label">Password:</label>
+
+                    <input type="password" id="password" class="form-control" th:field="*{password}"
+                           onchange="checkEntropy()" required/>
+                    <div id="password-strength-bar" class="password-strength-bar"></div>
+                </div>
+                <div id="result"></div>
+
+                <div class="invalid-feedback" th:if="${#fields.hasErrors('password')}" th:errors="*{password}"
                      th:text="${#fields.errors('password').getFirst()}"></div>
             </div>
             <div class="mb-3">
@@ -49,6 +57,8 @@
         </form>
 
     </div>
+
+    <script th:src="@{/js/password-input-visual-effects.js}" type="text/javascript"></script>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
